# the-front-office

./: .env.template  .gitignore  .nba_cache.json  .yahoofantasy  PR_DESCRIPTION.md  README.md  debug_output.txt  mypy.ini  project_spec.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: rules.md
.agent/rules/: rules.md
src/the_front_office/: __init__.py  main.py  scout.py  types.py
src/the_front_office/ai/: gemini.py
src/the_front_office/auth/: __init__.py  auth_manager.py
src/the_front_office/clients/: nba.py  yahoo.py
src/the_front_office/clients/gemini/: __init__.py  client.py  constants.py  types.py
src/the_front_office/clients/nba/: __init__.py  client.py  schedule.py  types.py
src/the_front_office/clients/yahoo/: __init__.py  client.py  constants.py  types.py
src/the_front_office/config/: constants.py  logging.py  settings.py
src/the_front_office/providers/: nba.py  yahoo.py
src/the_front_office/scout/: __init__.py  engine.py
src/the_front_office/services/: __init__.py  context_builder.py
src/the_front_office/trade/: __init__.py  engine.py  types.py
